<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- <string name="app_name">MYAPP</string>-->
    <string name="app_name">MYAPP</string>
    <string name="selected_language">English</string>
    <string name="language">Hi, MyApp</string>
    <string name="rb1">Telugu</string>
    <string name="rb2"> English </string>
    <string name="select_language"> Select Language</string>
    <string name="length2">Length 2:</string>
    <string name="length1">Length 1:</string>
    <string name="enter">Enter a Value</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="select">Select a Shape</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyDkYg5dUtTnctXtzjX84eyQgmvNtxsAjn0</string>
    <!-- AIzaSyCeguW2kOE2_6vd0Izuk6jly_GrwhfJ9SA-->

    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps_two_locatins">MapsActivityTwoLocatins</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_user_jet_pack">UserJetPackActivity</string>


</resources>